ARROW-9906: [C++] Keep S3 filesystem alive through open file objects

Closes #8141 from pitrou/ARROW-9906-s3-fs-lifetime

Authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: Antoine Pitrou <antoine@python.org>